changes the accordion header and adds css to align the accordion icon correctly

--- a/css/people.css
+++ b/css/people.css
@@ -51,3 +51,6 @@ p.title {
 .staff .person {
 	width: 17%;
 }
+.former_staff h4 {
+	padding-left: 25px;
+}
